syntax = "proto3";

package calculator;

option java_package = "com.proto.calculator";
option java_multiple_files = true;

message SumRequest {
    double first_number = 1;
    double second_number = 2;
}

message SumResponse {
    double sum_result = 1;
}

message SubtractRequest {
    double minuend = 1;
    double subtrahend = 2;
}

message SubtractResponse {
    double SubtractResult = 1;
}

message MultiplyRequest {
    double first_number = 1;
    double second_number = 2;
}

message MultiplyResponse {
    double MultiplyResult = 1;
}

message DivideRequest {
    double divided = 1;
    double divisor = 2;
}

message DivideResponse {
    double DivideResult = 1;
}

message PrimeNumberDecompositionRequest {
    int32 number = 1;
}

message PrimeNumberDecompositionResponse {
    int32 prime_factor = 1;
}

message ComputeAverageRequest {
    double number = 1;
}

message ComputeAverageResponse {
    double average = 1;
}

service CalculatorService {
    rpc Sum(SumRequest) returns (SumResponse) {};
    rpc Subtract(SubtractRequest) returns (SubtractResponse) {};
    rpc Multiply(MultiplyRequest) returns (MultiplyResponse) {};
    rpc Divide(DivideRequest) returns (DivideResponse) {};

    rpc PrimeNumberDecomposition(PrimeNumberDecompositionRequest) returns (stream PrimeNumberDecompositionResponse) {};
    rpc ComputeAverage(stream ComputeAverageRequest) returns (ComputeAverageResponse) {};
}